unpackaged/main/default/objects/ETSALES_Check_List_Lines__c/ETSALES_Check_List_Lines__c.object-meta.xml
<CustomObject>
    <label>Check List Lines</label>
    <nameField>
        <displayFormat>CH-{0000}</displayFormat>
        <label>Check List Lines Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Check List Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>