unpackaged/main/default/objects/ETSALES_Check_List_Lines__c/fields/ETSALES_AddChecklist__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_AddChecklist__c</fullName>
    <defaultValue>false</defaultValue>
    <description>to add the checklist through custom UI</description>
    <label>AddChecklist</label>
    <type>Checkbox</type>
</CustomField>