unpackaged/main/default/objects/ETSALES_Check_List_Lines__c/fields/ETSALES_Assign_To__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Assign_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assign To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Check_List_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>