unpackaged/main/default/objects/ETSALES_Check_List_Lines__c/fields/ETSALES_Checklist__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Checklist__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Checklist</label>
    <referenceTo>ETSALES_checklist__c</referenceTo>
    <relationshipLabel>Check List Lines</relationshipLabel>
    <relationshipName>Check_List_Lines</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>