unpackaged/main/default/objects/ETSALES_Check_List_Lines__c/fields/ETSALES_Required__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>