unpackaged/main/default/objects/ETSALES_Check_List_Lines__c/fields/ETSALES_Status__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
                <default>true</default>
                <label>Available</label>
            </value>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
            <value>
                <fullName>Unavailable</fullName>
                <isActive>false</isActive>
                <label>Unavailable</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>