unpackaged/main/default/objects/ETSALES_Check_List_Lines__c/fields/ETSALES_Tender__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Tender__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tender</label>
    <referenceTo>ETSALES_Tender__c</referenceTo>
    <relationshipLabel>Check List Lines</relationshipLabel>
    <relationshipName>Check_List_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>